[gd_scene load_steps=13 format=3 uid="uid://b8va7b2srstar"]

[ext_resource type="Script" uid="uid://cv0uge8ojj47h" path="res://scripts/game_over.gd" id="1_3r3ie"]
[ext_resource type="FontFile" uid="uid://ilx8vgt1m1ng" path="res://assets/fonts/Jakob Bold.ttf" id="2_tji18"]
[ext_resource type="AudioStream" uid="uid://b7jcjg3rv0yxg" path="res://assets/sfx/pop_1.wav" id="3_bntgu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ppnft"]

[sub_resource type="LabelSettings" id="LabelSettings_wxl0b"]
font_size = 100
font_color = Color(0.5137255, 0.003921569, 0.015686275, 1)
outline_size = 40
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bd0qp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aj8w3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ocpd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ma5dk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_das05"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0tmgg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mvx2f"]

[node name="GameOver" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ppnft")
script = ExtResource("1_3r3ie")

[node name="Grid" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 1.0
offset_right = 1150.0
offset_bottom = 646.0
alignment = 1

[node name="GameoverText" type="Label" parent="Grid"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tji18")
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
label_settings = SubResource("LabelSettings_wxl0b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuBtn" type="Button" parent="Grid"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.078431375, 0.80784315, 0.4509804, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("2_tji18")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxEmpty_bd0qp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_aj8w3")
text = "Back to menu
"
flat = true

[node name="RestartBtn" type="Button" parent="Grid"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.078431375, 0.80784315, 0.4509804, 1)
theme_override_colors/font_hover_pressed_color = Color(0.078431375, 0.80784315, 0.4509804, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("2_tji18")
theme_override_font_sizes/font_size = 50
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4ocpd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ma5dk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_das05")
text = "Restart
"
flat = true

[node name="QuitBtn" type="Button" parent="Grid"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.078431375, 0.80784315, 0.4509804, 1)
theme_override_colors/font_hover_pressed_color = Color(0.078431375, 0.80784315, 0.4509804, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("2_tji18")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxEmpty_0tmgg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mvx2f")
text = "Quit"
flat = true

[node name="PopSfx" type="AudioStreamPlayer2D" parent="Grid"]
position = Vector2(-1, 0)
stream = ExtResource("3_bntgu")

[connection signal="pressed" from="Grid/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="Grid/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="Grid/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="finished" from="Grid/PopSfx" to="." method="_on_pop_sfx_finished"]
